reedit the openapi.yaml and create script for create DB and samples , and change some of the functions
